# ShapeSimilarityAnalysis

./: LICENSE  README.md  pyproject.toml
scripts/: build.ps1
src/: main.py
src/analyze_image/: shape_detector.py
src/cli/: parser.py
src/commands/: commands.py
src/config/: constants.py
src/generate_image/: generate_image.py
src/utils/: histogram.py
