[tool.poetry]
name = "shape-similarity-analysis"
version = "0.1.0"
description = ""
authors = ["Dariusz Homa <dariuszhoma7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
argparse = "^1.4.0"
opencv-python = "^4.12.0.88"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
